2007-11-22  Sebastien Pouliot  <sebastien@ximian.com> 

	* DontIgnoreMethodResultRule.cs: Don't create a MessageCollection 
	unless we have at least one message to return to the runner. Reduce
	false positives by handling all Append* methods from StringBuilder
	and add exception for PermissionSet.[Add|Remove]Permission.

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeRule.cs: Use MethodReference (not 
	MethodDefinition) when iterating thru overrides.

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com> 

	* UseStringEmptyRule.cs: Don't create a MessageCollection unless we 
	have at least one message to return to the runner.

2007-11-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidUninstantiatedInternalClassesRule.cs: Simplified logic. 
	Avoid using strings. IsInstantiated logic looks incomplete in scope
	(needs more tests).

2007-11-21  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeRule.cs: Simplified logic. Avoid using 
	strings. Consider finalizers (since it's normal that they look 
	uncalled). 

2007-11-18  Nestor Salceca  <nestor.salceda@gmail.com>
	
	* Gendarme.Rules.Performance.xml.in: Fix the problem closing tag in
	AvoidStringOnStringsRule description.

2007-11-10  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* Gendarme.Rules.Performance.xml.in: Added Uri for
	UsingStringLengthInsteadOfEmptyStringRule,
	AvoidUninstantiatedInternalClassesRule, AvoidUncalledPrivateCodeRule,
	AvoidToStringOnStringsRule and DontIgnoreMethodResultRule.

2007-11-10  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* Gendarme.Rules.Performance.xml.in:  Added documentation for
	AvoidToStringOnStringsRule and DontIgnoreMethodResultRule.

2007-10-08  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidToStringOnStringsRule.cs: Fix in case where the method has no
	body (e.g. p/invoke, icalls...);
	* UsingStringLengthInsteadOfCheckingEmptyStringRule.cs: Fix in case 